# kidney-transplant-llm

./: .gitignore  README.md  pyproject.toml
kidney_transplant_llm/: __init__.py  pydantic_study_variables.py
kidney_transplant_llm/medication/: README.MD  annotation.py  medicationrequest.py  timing.py  ucum.py
kidney_transplant_llm/postproc/: athena.py  compat.py  counting_autoprocessable_patients.py  deprecated.py  deprecated_compat.py  example.py  filetool.py  pivot_table.py  probability.py  rank_llm.py  schema.py
kidney_transplant_llm/prompts/: system_prompt.txt  user_prompt.txt
kidney_transplant_llm/sql/: create_llm_tables.MD  create_tables.MD  irae__gpt4_fhir.sql  irae__gpt4_outcome.sql  irae__gpt4_parsed.sql  irae__gpt4_ranked.sql  irae__llm_raw.sql  spotcheck.sql
tests/: test_parse_dates.py  test_probability.py  test_transplant_date.py
transplant_llm/: gpt4_model_group1_inference.py  gpt4_model_group3_part1_inference.py  medications.MD  parse_dates.py  pydantic_group3_outcomes.py  pydantic_study_variables.py
transplant_llm/deprecated/: deepseek_model_group1_inference.py  gpt4_model_group2_inference.py  gpt4_model_group3_part2_inference.py  llama_model_group1_inference.py  mistral-model-group1-inference.py
transplant_llm/drug/: README.MD
transplant_llm/medication/: README.MD  annotation.py  medicationrequest.py  prompt.txt  timing.py
transplant_llm/prompts/: system_prompt_FSL.txt
transplant_llm/sql/: check_qa_testing.sql  create_tables.MD  irae__gpt4_compliance.sql  irae__gpt4_donor.sql  irae__gpt4_fhir.sql  irae__gpt4_infection.sql  (+7 more)
(+8 files in other folders)
